--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@
 
 results/
 results-revision/
+results-revision2/
+results-revision2-no_lisbon/
+results-revision-lisbon-both/
+results-revision-lisbon-both2/
+results-revision-lisbon-both3/
+results-revision-no_lisbon-both/
+results-revision-no_lisbon-both2
+re
 logs/
 test/
 feather/
